Creado mediante Colaboratory

--- a/Riesgo_de_pobreza.ipynb
+++ b/Riesgo_de_pobreza.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMgItqEQzUI0CUg+sgpveiU",
+      "authorship_tag": "ABX9TyPXUPHerFM29w0nU++Wk3Ws",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -684,6 +684,160 @@
       "metadata": {
         "id": "mHhWvGD81_lH"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MODELO DE MACHINE LEARNING"
+      ],
+      "metadata": {
+        "id": "_C-Wsupt3idX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "\n",
+        "# Cargar los datos\n",
+        "data = pd.read_csv(\"datos_ingresos.csv\")\n",
+        "\n",
+        "# Convertir variables categóricas en variables numéricas utilizando one-hot encoding\n",
+        "data_encoded = pd.get_dummies(data)\n",
+        "\n",
+        "# Dividir los datos en características (X) y etiquetas (y) nuevamente\n",
+        "X_encoded = data_encoded.drop('Año', axis=1)\n",
+        "y_encoded = data_encoded['Año']\n",
+        "\n",
+        "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
+        "X_train_encoded, X_test_encoded, y_train_encoded, y_test_encoded = train_test_split(X_encoded, y_encoded, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Inicializar y entrenar el modelo de regresión lineal con los datos codificados\n",
+        "model_encoded = LinearRegression()\n",
+        "model_encoded.fit(X_train_encoded, y_train_encoded)\n",
+        "\n",
+        "# Predecir en el conjunto de prueba\n",
+        "y_pred_encoded = model_encoded.predict(X_test_encoded)\n",
+        "\n",
+        "# Evaluar el rendimiento del modelo\n",
+        "mse_encoded = mean_squared_error(y_test_encoded, y_pred_encoded)\n",
+        "r2_encoded = r2_score(y_test_encoded, y_pred_encoded)\n",
+        "print('Error cuadrático medio:', mse_encoded)\n",
+        "print('Coeficiente de determinación:', r2_encoded)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O5ZnGnBs3ouA",
+        "outputId": "4f203316-3aa6-40c4-abe3-873120881260"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Error cuadrático medio: 0.0\n",
+            "Coeficiente de determinación: 1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Un error cuadrático medio (MSE) de 0.0 y un coeficiente de determinación (R^2) de 1.0 indican un rendimiento perfecto del modelo de regresión lineal. Esto significa que el modelo puede predecir con precisión las etiquetas de los datos de prueba, lo que sugiere que el modelo se ajusta muy bien a los datos y puede generalizar correctamente a nuevas observaciones. Es importante tener en cuenta que un rendimiento perfecto puede ser indicativo de un posible sobreajuste, por lo que siempre es crucial validar el modelo en conjuntos de datos separados y realizar ajustes según sea necesario."
+      ],
+      "metadata": {
+        "id": "vr8AxZaN3yll"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solicitar los datos de la persona\n",
+        "print(\"Por favor, ingrese los siguientes datos:\")\n",
+        "edad = int(input(\"Edad: \"))\n",
+        "genero = input(\"Género (Masculino/Femenino): \")\n",
+        "nivel_educativo = input(\"Nivel educativo (Universidad/Secundaria/Primaria): \")\n",
+        "ingresos_familiares = int(input(\"Ingresos familiares: \"))\n",
+        "acceso_agua_potable = input(\"¿Tiene acceso a agua potable? (Sí/No): \")\n",
+        "acceso_electricidad = input(\"¿Tiene acceso a electricidad? (Sí/No): \")\n",
+        "\n",
+        "# Crear un DataFrame con los datos ingresados por la persona\n",
+        "datos_persona = pd.DataFrame({\n",
+        "    'Edad': [edad],\n",
+        "    'Género': [genero],\n",
+        "    'Nivel_educativo': [nivel_educativo],\n",
+        "    'Ingresos_familiares': [ingresos_familiares],\n",
+        "    'Acceso_agua_potable': [acceso_agua_potable],\n",
+        "    'Acceso_electricidad': [acceso_electricidad]\n",
+        "})\n",
+        "\n",
+        "# Realizar la codificación one-hot de las variables categóricas\n",
+        "datos_persona_encoded = pd.get_dummies(datos_persona)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UFGWhSax4Jql",
+        "outputId": "260964ad-c28a-4cde-cf0c-ea9a23db9f3f"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Por favor, ingrese los siguientes datos:\n",
+            "Edad: 34\n",
+            "Género (Masculino/Femenino): Masculino\n",
+            "Nivel educativo (Universidad/Secundaria/Primaria): Universidad\n",
+            "Ingresos familiares: 34\n",
+            "¿Tiene acceso a agua potable? (Sí/No): Sí\n",
+            "¿Tiene acceso a electricidad? (Sí/No): Sí\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Rellenar los datos de la persona con las columnas que faltan y colocar valores predeterminados\n",
+        "datos_persona_encoded = datos_persona_encoded.reindex(columns=X_encoded.columns, fill_value=0)\n",
+        "\n",
+        "# Predecir la pobreza de la persona utilizando el modelo\n",
+        "pobreza_predicha = model_encoded.predict(datos_persona_encoded)\n",
+        "\n",
+        "# Imprimir el resultado\n",
+        "if pobreza_predicha[0]:\n",
+        "    print(\"El modelo predice que la persona es clasificada como pobre.\")\n",
+        "else:\n",
+        "    print(\"El modelo predice que la persona no es clasificada como pobre.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-BbgKiZZ7TaW",
+        "outputId": "4d03a1cc-a6eb-4528-a15d-28ec1df5b0af"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El modelo predice que la persona es clasificada como pobre.\n"
+          ]
+        }
+      ]
     }
   ]
 }
